[package]
name = "tree-sitter-hylang"
description = "hylang grammar for the tree-sitter parsing library"
version = "0.0.9"
keywords = ["incremental", "parsing", "hylang"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/iamtuxmeister/tree-sitter-hylang"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.3"

[build-dependencies]
cc = "1.0"
